# UniRide-SME

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  unit-tests.yml
app/: config.py  rest_api.py
test/unit/: conftest.py
test/unit/test_api/: test_user_api.py
test/unit/test_bo/: test_address_bo.py  test_trip_bo.py  test_user_bo.py
test/unit/test_service/: test_admin.py  test_book.py  test_user.py
uniride-sme/: config.ini  connect_pg.py  rest_api.py
uniride-sme/api/: trip_api.py
uniride_sme/: __init__.py  config.ini  config.py  config_template.ini  connect_pg.py  rest_api.py
uniride_sme/api/: address_api.py  trip_api.py  user.py  user_api.py
uniride_sme/model/bo/: address_bo.py  book_bo.py  car_bo.py  documents_bo.py  trip_bo.py  user_bo.py
uniride_sme/model/dto/: book_dto.py  car_dto.py  document_dto.py  trip_dto.py  user_dto.py
uniride_sme/models/bo/: address_bo.py  documents_bo.py  register_doc.txt  trip_bo.py  user_bo.py
uniride_sme/models/dto/: address_dto.py  address_simple_dto.py  trip_dto.py  trips_get_dto.py  user_dto.py
uniride_sme/route/: about_route.py  address_route.py  admin_route.py  book_route.py  car_route.py  trip_route.py  user_route.py
uniride_sme/service/: address_service.py  admin_service.py  book_service.py  car_service.py  document_verification_service.py  documents_service.py  trip_service.py  user_service.py
uniride_sme/utils/: about.py  decorator.py  email.py  field.py  file.py  jwt_token.py  maths_formulas.py  pagination.py  role_user.py  trip_status.py
(+24 files in other folders)
